[metadata]
name = py-fastlz
version = 0.1.0-alpha.1
description = A pure python implementation of the FastLZ compression algorithm
long_description = file: README.md
url = https://github.com/tcyrus/py-fastlz
author = Timothy Cyrus
author_email = tcyrus@tcyr.us
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*
